--- a/Getting gradients - cifar10.ipynb
+++ b/Getting gradients - cifar10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,9 +852,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python383jvsc74a57bd0610150a29c6fa44a2cee4fd629c2454192e2a3e34f5db4c5345beacf7463207b",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
